fix(coachmark): remove stretch from container

--- a/core/scss/components/coachmark.scss
+++ b/core/scss/components/coachmark.scss
@@ -47,7 +47,6 @@
           @include flex($fd: column, $fw: wrap);
 
           width: 100%;
-          align-items: stretch;
           padding: (rem-calc(24) rem-calc(16) rem-calc(19) rem-calc(16));
 
           > [class$='__header'] {
